--- a/page1.html
+++ b/page1.html
@@ -10,7 +10,9 @@
       <p>
           A rare photo of Donald Trump and Sonic the Hedgehog about to embrace for the first time since Sonic crossed the Delaware River to fight at Iwo Jima, circa 1191 AD.
       </p>
-      <img src ="
+      <img src ="Sonic Trump.jpg"
+      <br>
+      <a href = "../index.html">Take me back!</a>
     </body>
   
 </html>
