--- a/index.html
+++ b/index.html
@@ -29,14 +29,14 @@
 			a winner, always winning, and he's racing through these unbelievable zones, the best zones you'll ever see.
 			Now, Dr. Robotnik, he's a bit like the fake news, always causing trouble. But Sonic and Tails, they're the true heroes, the best heroes. And the way they come together, it's just tremendous, 
 			a real team effort, just like making America great again. Get ready for a blockbuster, the biggest blockbuster. Sonic the Hedgehog 2, it's going to be huge, folks. 
-			You're going to love it, and you're going to win, just like Sonic. Enjoy the show, folks!"
+			You're going to love it, and you're going to win, just like Sonic."
 		</p>
 
 		<p>
 				"Sonic the Hedgehog, folks, let me tell you, he's a perfect 10. A real winner, tremendous hedgehog. He's got speed, oh boy, speed like you've never seen before. 
 			Faster than anything, believe me, I know speed. And that attitude, the confidence, it's tremendous. He's a go-getter, always on the move, always winning. And those loops, 
 			those loops are just fantastic, beautiful loops. You know, I've met a lot of hedgehogs, many hedgehogs, and Sonic is the best, believe me. 
-			Sonic the Hedgehog, a perfect 10, a true winner. Make Mobius great again!"
+			Sonic the Hedgehog, a perfect 10, a true winner. Enjoy the show, folks! Make Mobius great again!"
 		</p>
 		
 		<hr>
