--- a/page1.html
+++ b/page1.html
@@ -12,7 +12,7 @@
       </p>
       <img src ="Sonic Trump.jpg"
       <br>
-      <a href = "assignment_5/index.html">Take me back!</a>
+      <a href = "../index.html">Take me back!</a>
     </body>
   
 </html>
