--- a/page1.html
+++ b/page1.html
@@ -7,12 +7,12 @@
   </header>
     <body>
       <h1>The Don and the Son</h1> 
+      <img src ="Sonic Trump.jpg">
       <p>
-          A rare photo of Donald Trump and Sonic the Hedgehog about to embrace for the first time since Sonic crossed the Delaware River to fight at Iwo Jima, circa 1191 AD.
+      A rare photo of Donald Trump and Sonic the Hedgehog about to embrace for the first time since Sonic crossed the Delaware River to fight at Iwo Jima, circa 1191 AD.
       </p>
-      <img src ="Sonic Trump.jpg"
       <br>
-      <a href = "https://mcrodoku.github.io/assignment_5/index.html">Take me back!</a>
+      <a href = "https://github.com/McRodoku/assignment_5/main/index.html">Take me back!</a>
     </body>
   
 </html>
