--- a/page1.html
+++ b/page1.html
@@ -12,7 +12,7 @@
       A rare photo of Donald Trump and Sonic the Hedgehog about to embrace for the first time since Sonic crossed the Delaware River to fight at Iwo Jima, circa 1191 AD.
       </p>
       <br>
-      <a href="index.html">Take me back!</a>
+      <a href="assignment_5/index.html">Take me back!</a>
     </body>
   
 </html>
