--- a/page1.html
+++ b/page1.html
@@ -12,7 +12,9 @@
       A rare photo of Donald Trump and Sonic the Hedgehog about to embrace for the first time since Sonic crossed the Delaware River to fight at Iwo Jima, circa 1191 AD.
       </p>
       <br>
-      <a href="assignment_5/index.html">Take me back!</a>
+     <form>
+ <input type="button" value="Take me back!" onclick="history.back()">
+</form>
     </body>
   
 </html>
